[gd_scene load_steps=4 format=3 uid="uid://win_screen_001"]

[ext_resource type="Script" path="res://scenes/ui/win_screen.gd" id="1"]

[sub_resource type="LabelSettings" id="LabelSettings_title"]
font_size = 48
font_color = Color(1, 0.85, 0.2, 1)
outline_size = 4
outline_color = Color(0, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_stats"]
font_size = 20
font_color = Color(0.9, 0.9, 0.9, 1)
outline_size = 2
outline_color = Color(0, 0, 0, 1)

[node name="WinScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.05, 0.1, 0.05, 0.92)

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -250.0
offset_top = -220.0
offset_right = 250.0
offset_bottom = 220.0
theme_override_constants/separation = 20
alignment = 1

[node name="TitleLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "VICTORY!"
label_settings = SubResource("LabelSettings_title")
horizontal_alignment = 1

[node name="StatsLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Score loading..."
label_settings = SubResource("LabelSettings_stats")
horizontal_alignment = 1

[node name="ButtonRow" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
alignment = 1
theme_override_constants/separation = 20

[node name="NextLevelBtn" type="Button" parent="VBoxContainer/ButtonRow"]
layout_mode = 2
custom_minimum_size = Vector2(200, 50)
text = "Next Level"

[node name="MenuBtn" type="Button" parent="VBoxContainer/ButtonRow"]
layout_mode = 2
custom_minimum_size = Vector2(200, 50)
text = "Main Menu"
